--- a/personal-site/wwwroot/index.html
+++ b/personal-site/wwwroot/index.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="css/app.css" />
     <link rel="icon" type="image/png" href="img/zyt.png" />
     <link href="personal-site.styles.css" rel="stylesheet" />
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WPM2P48B');</script>
+<!-- End Google Tag Manager -->
 </head>
 
 <body>
